--- a/build.gradle
+++ b/build.gradle
@@ -29,7 +29,11 @@ dependencies {
 
     modImplementation "com.github.sib-energy-craft:energy-api:${project.sec_energy_api_version}"
     modImplementation "com.github.sib-energy-craft:sec-utils:${project.sec_utils_version}"
+
     modImplementation "com.github.sib-energy-craft:mod-tools-api:${project.sec_mod_tools_api_version}"
+    modImplementation "com.github.sib-energy-craft:mod-tools-impl:${project.sec_mod_tools_impl_version}"
+
+    modImplementation "com.github.sib-energy-craft:mod-recipes:${project.sec_mod_recipies_version}"
 }
 
 processResources {
