--- a/build.gradle
+++ b/build.gradle
@@ -31,9 +31,8 @@ dependencies {
     modImplementation "com.github.sib-energy-craft:sec-utils:${project.sec_utils_version}"
 
     modImplementation "com.github.sib-energy-craft:mod-tools-api:${project.sec_mod_tools_api_version}"
-    modImplementation "com.github.sib-energy-craft:mod-tools-impl:${project.sec_mod_tools_impl_version}"
 
-    modImplementation "com.github.sib-energy-craft:mod-recipes:${project.sec_mod_recipies_version}"
+    modImplementation "com.github.sib-energy-craft:mod-recipes:${project.sec_mod_recipes_version}"
 }
 
 processResources {
