--- a/gradle.properties
+++ b/gradle.properties
@@ -5,7 +5,7 @@ org.gradle.jvmargs=-Xmx2G
 # check these on https://modmuss50.me/fabric.html
 minecraft_version=1.19.4
 yarn_mappings=1.19.4+build.2
-loader_version=0.14.19
+loader_version=0.14.21
 
 # Mod Properties
 mod_version=0.0.8
@@ -18,14 +18,15 @@ mod_name=mod-rubber
 mod_author=sibmaks
 
 #Fabric api
-fabric_version=0.80.0+1.19.4
+fabric_version=0.83.0+1.19.4
 lombok_version=1.18.26
 
 # sib-energy-craft libs
-sec_energy_api_version=0.0.4
-sec_utils_version=0.0.17
+sec_energy_api_version=0.0.6-1.19.4
+sec_utils_version=0.0.20-1.19.4
 
+# sib-energy-craft mods APIs
 sec_mod_tools_api_version=0.0.1
 
-sec_mod_tools_impl_version=0.0.1
-sec_mod_recipies_version=0.0.3
+# sib-energy-craft mods impls
+sec_mod_recipes_version=0.0.8
