--- a/gradle.properties
+++ b/gradle.properties
@@ -8,7 +8,7 @@ yarn_mappings=1.20.4+build.3
 loader_version=0.15.9
 
 # Mod Properties
-mod_version=0.0.12-1.20.4
+mod_version=0.0.13-1.20.4
 maven_group=com.github.sib-energy-craft
 archives_base_name=mod-rubber
 jdk_version=17
@@ -25,7 +25,7 @@ lombok_version=1.18.32
 sec_energy_api_version=0.1.1-1.20.4
 sec_utils_version=0.0.21-1.20.4
 
-sec_mod_tools_api_version=0.0.4-1.20.4
+sec_mod_api_version=0.0.1-1.20.4
 
 sec_mod_tools_impl_version=0.0.7-1.20.4
 sec_mod_recipes_version=0.0.13-1.20.4
